--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@mui/material": "^5.12.2",
         "@reduxjs/toolkit": "^1.9.5",
         "@tanstack/react-query": "^4.29.5",
+        "@tanstack/react-query-devtools": "^4.29.6",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
