--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@hookform/resolvers": "^3.1.0",
         "@mui/icons-material": "^5.11.16",
         "@mui/material": "^5.12.2",
+        "@mui/x-date-pickers": "^6.3.1",
         "@reduxjs/toolkit": "^1.9.5",
         "@tanstack/react-query": "^4.29.5",
         "@tanstack/react-query-devtools": "^4.29.6",
