--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
         "@types/react-dom": "^18.2.1",
         "axios": "^1.3.6",
         "dayjs": "^1.11.7",
-        "debounce": "^1.2.1",
         "jwt-decode": "^3.1.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -30,6 +29,7 @@
         "react-router-dom": "^6.10.0",
         "react-scripts": "5.0.1",
         "typescript": "^4.9.5",
+        "use-debounce": "^9.0.4",
         "web-vitals": "^2.1.4",
         "yup": "^1.1.1"
     },
@@ -56,8 +56,5 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    },
-    "devDependencies": {
-        "@types/debounce": "^1.2.1"
     }
 }
