--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@types/react-dom": "^18.2.1",
         "axios": "^1.3.6",
         "dayjs": "^1.11.7",
+        "debounce": "^1.2.1",
         "jwt-decode": "^3.1.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -56,5 +57,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@types/debounce": "^1.2.1"
     }
 }
