--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "dayjs": "^1.11.7",
         "debounce": "^1.2.1",
         "jwt-decode": "^3.1.2",
+        "randomatic": "^3.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.43.9",
@@ -31,6 +32,7 @@
         "react-scripts": "5.0.1",
         "typescript": "^4.9.5",
         "use-debounce": "^9.0.4",
+        "uuid": "^9.0.0",
         "web-vitals": "^2.1.4",
         "yup": "^1.1.1"
     },
@@ -59,6 +61,8 @@
         ]
     },
     "devDependencies": {
-        "@types/debounce": "^1.2.1"
+        "@types/debounce": "^1.2.1",
+        "@types/randomatic": "^3.1.3",
+        "@types/uuid": "^9.0.1"
     }
 }
