--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "axios": "^1.3.6",
         "dayjs": "^1.11.7",
         "debounce": "^1.2.1",
+        "fast-equals": "^5.0.1",
         "jwt-decode": "^3.1.2",
         "randomatic": "^3.1.1",
         "react": "^18.2.0",
