--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "debounce": "^1.2.1",
         "fast-equals": "^5.0.1",
         "jwt-decode": "^3.1.2",
+        "notistack": "^3.0.1",
         "randomatic": "^3.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
