Split pages content and styles

--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@emotion/react": "^11.10.8",
-        "@emotion/styled": "^11.10.8",
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
         "@hookform/resolvers": "^3.1.0",
         "@mui/icons-material": "^5.11.16",
         "@mui/joy": "^5.0.0-alpha.81",
         "@mui/lab": "^5.0.0-alpha.131",
-        "@mui/material": "^5.12.2",
+        "@mui/material": "^5.13.5",
         "@mui/x-date-pickers": "^6.3.1",
         "@reduxjs/toolkit": "^1.9.5",
         "@tanstack/react-query": "^4.29.5",
@@ -34,6 +34,7 @@
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.10.0",
         "react-scripts": "5.0.1",
+        "tss-react": "^4.8.6",
         "typescript": "^4.9.5",
         "use-debounce": "^9.0.4",
         "uuid": "^9.0.0",
